# csvstats-cli

./: README.md  csvstats.py  pyproject.toml  sample.csv
